# scoobideria

./: Cargo.toml  setup.py
scoobideria/: __init__.py  main.py
scoobideria/bot/: main.py
src/: grammar.lalrpop  lib.rs  main.rs
