[package]
name = "scoobideria"
version = "0.1.0"
authors = ["Michał Sidor <public+git@meekchopp.es>"]
edition = "2018"
build = "build.rs"

[profile.release]
lto = true

[dependencies]
telegram-bot = "0.8.0"
tokio = { version = "0.2", features = ["macros", "fs"] }
lalrpop-util = { version = "0.19.1", features = ["lexer"] }
futures = "0.3.8"
rand = "0.7.3"

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }
