[package]
name = "scoobideria"
version = "0.1.0"
authors = ["Michał Sidor <public+git@meekchopp.es>"]
edition = "2018"
build = "build.rs"

[lib]
name = "scoobidice"
crate-type = ["cdylib"]

[dependencies]
lalrpop-util = { version = "0.19.3", features = ["lexer"] }
rand = "0.8.0"
pyo3 = { version = "0.13.2", features = ["extension-module"] }

[build-dependencies]
lalrpop = { version = "0.19.3", features = ["lexer"] }

[package.metadata.maturin]
requires-dist = ["python-telegram-bot~=13.4.1"]

[package.metadata.maturin.scripts]
scoobideria = "scoobideria.main:main"
